editor: fix alignment items in callout heading (#8101)
* editor: fix alignment items in callout heading

* Update packages/editor/styles/styles.css


---------

--- a/packages/editor/styles/styles.css
+++ b/packages/editor/styles/styles.css
@@ -710,7 +710,7 @@ p > *::selection {
 
 .ProseMirror div.callout > :first-child::after {
   position: absolute;
-  top: 3px;
+  top: 0px;
   right: 0px;
   cursor: pointer;
   content: "";
